# Timer

./: .cproject  .gitignore  .parasoft  .project  CMakeLists.txt  MODULE.bazel  Makefile  README.md  Timer.bdf  Timer_scan.sh  WORKSPACE.bazel  cmake_install.cmake  cpptest.bdf  cpptestcli-orginal.properties  cpptestcli.properties  parasoft.suppress  timer  timer.c  timer.h
.github/workflows/: upload-sarif.yml
jenkins/: sa-docker-full
reports/: report.sarif  report_azure.sarif
tests/autogenerated/: TestSuite_clock_c.c  TestSuite_driver_c.c  TestSuite_stdinout_c.c  TestSuite_timer_c.c
